Tue Mar 13 02:53:20 CET 2012  John Tytgat  <John.Tytgat@aaug.net>

	* regression/tests_pass/instr_bfc_bfi.s: Add.
	* decode.c (oDecodeTable): Add BFC/BFI.
	* option.c (Option_GetInstrWidth): Fault narrow instruction specifier
	in ARM mode.
	* m_cpu.c (m_und): Remove check on narrow instruction specifier in
	ARM mode.
	(core_bfc_bfi, m_bfc, m_bfi): Add.
	* m_cpu.h (m_bfc, m_bfi): Add.

Sun Mar 11 22:41:30 CET 2012  John Tytgat  <John.Tytgat@aaug.net>

	* regression/tests_pass/dcfs_dcfd.s: Add floating point literal tests.
	* put.c (Put_FloatDataWithOffset): Refactor union arm_float,
	arm_double_fpa and arm_double_vfp definition out into...
	* fpu.h: ...this.
	* state.c (oDefaultSyntax): Initialise to eSyntax_Both instead of
	eSyntax_PreUALOnly.
	* main.c (main): --32 and --arm means eSyntax_Both, not
	eSyntax_PreUALOnly. 
	* get.h (ASL): Define as LSL.
	* lex.c (Lex_GetFloatFloatingPointLiteral,
	Lex_GetDoubleFloatingPointLiteral): Add.
	(lexGetPrim): Add support for floating point literals.

Sat Mar 10 18:44:51 CET 2012  John Tytgat  <John.Tytgat@aaug.net>

	* regression/tests_pass/align_instr.s: Add.
	* m_cpuctrl.c (branch_shared): Support branch instructions at currently
	unaligned area index.
	* README: Add releases entry.

Sat Mar  3 03:25:17 CET 2012  John Tytgat  <John.Tytgat@aaug.net>

	* regression/tests_pass/misc.s: Move SWP/SWPB tests to...
	* regression/tests_pass/instr_swp.s: ...here.  Enhance test with
	condition codes and UAL vs pre-UAL syntax.
	* m_cpumem.c (m_swp): Ignore when in Thumb mode.  Add test on register
	values.
	* option.c, option.h (optionCondB): Rename to Option_CondB and support
	UAL syntax.

Sat Mar  3 00:28:46 CET 2012  John Tytgat  <John.Tytgat@aaug.net>

	* regression/tests_pass/nop_new_style.s: Rename to...
	* regression/tests_pass/instr_nop_new_style.s: ...this.  Add Thumb
	test.
	* regression/tests_pass/nop_old_style.s: Rename to...
	* regression/tests_pass/instr_nop_old_style.s: ...this.